--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply font-bold tracking-tight;
+    @apply tracking-tight;
+    font-family: 'Rubik', sans-serif;
   }
 
   p, span, a, button, input, textarea {
