--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   html {
     scroll-behavior: smooth;
     font-family: 'Rubik', sans-serif;
+    height: 100%;
   }
   
   body {
@@ -13,6 +14,12 @@
     direction: rtl;
     margin: 0;
     min-height: 100vh;
+    height: 100%;
+  }
+
+  #root {
+    min-height: 100vh;
+    height: 100%;
   }
 
   :root {
